Bug 312823 - There is always a "undefined[Finished]" notification when gwenview starts up.
Summary: There is always a "undefined[Finished]" notification when gwenview starts up.
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.11.0 pre
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
: 312808 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-07 15:26 UTC by Jekyll Wu
Modified: 2014-01-03 16:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.0
Sentry Crash Report:


Attachments
the notification on startup (25.24 KB, image/png)
2013-01-07 15:28 UTC, Jekyll Wu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jekyll Wu 2013-01-07 15:26:23 UTC
I really wonder where that notification comes from. 

I at first think it should be nepomuk related, but it still happens after gwenview is compiled with -DGWENVIEW_SEMANTICINFO_BACKEND=None. It also happens in a brandly new user account.


Reproducible: Always

Steps to Reproduce:
1. start gwenview in konsole

Actual Results:  
A notificaion shows up, saying "undefined[Finished]"

Expected Results:  
No such confusing notification
Comment 1 Jekyll Wu 2013-01-07 15:28:03 UTC
Created attachment 76277 [details]
the notification on startup
Comment 2 Benni Hill 2013-01-07 17:23:36 UTC
I can confirm this but have also no idea where it comes from. It doesn't appear every time for me  though.
Comment 3 Benni Hill 2013-01-22 20:41:24 UTC
I just updated to KDE SC 4.10.0 RC3 and now it seems to appear on every start of gwenview.
Comment 4 Jekyll Wu 2013-01-23 12:32:07 UTC
"gwenview some-picture.png" ==> no notification .

So this should be related  with the "Places  & Tags" sidebar, which is shown when you start gwenview in the normal way .
Comment 5 Benni Hill 2013-01-23 17:21:13 UTC
https://git.reviewboard.kde.org/r/108565/
Comment 6 Benni Hill 2013-01-25 16:58:42 UTC
Git commit 04c6fbf05ddde31a0a098601372ea9dc9af6204c by Benjamin Löwe.
Committed on 23/01/2013 at 19:09.
Pushed by bennihill into branch 'KDE/4.10'.

Fix for bug 312823 - There is always a "undefined[Finished]"
notification when gwenview starts up:
Don't try to load an empty KUrl.

REVIEW: 108565
FIXED-IN: 4.10.0

M  +4    -0    app/fullscreencontent.cpp

http://commits.kde.org/gwenview/04c6fbf05ddde31a0a098601372ea9dc9af6204c
Comment 7 Jekyll Wu 2013-01-25 23:54:53 UTC
*** Bug 312808 has been marked as a duplicate of this bug. ***