Fix for bug 312823 - There is always a "undefined[Finished]" notification when gwenview starts up: Don't try to load an empty KUrl.

REVIEW: 108565
BUG: 312823
FIXED-IN: 4.10.0